implement patch endpoint