@@ -1,6 +1,7 @@
 package event_scheduler_api.api.service;
 
 import event_scheduler_api.api.dto.request.CreateEventRequest;
+import event_scheduler_api.api.dto.request.EventParticipantRequest;
 import event_scheduler_api.api.dto.response.EventParticipantResponse;
 import event_scheduler_api.api.dto.response.EventResponse;
 import event_scheduler_api.api.dto.response.UserContactResponse;
@@ -9,7 +10,6 @@ import event_scheduler_api.api.dto.request.EventRequest;
 import event_scheduler_api.api.model.EventParticipant;
 import event_scheduler_api.api.model.EventParticipationStatus;
 import event_scheduler_api.api.model.User;
-import event_scheduler_api.api.repository.EventParticipantRepository;
 import event_scheduler_api.api.repository.EventRepository;
 import event_scheduler_api.api.repository.UserRepository;
 import org.springframework.beans.factory.annotation.Autowired;
@@ -18,9 +18,7 @@ import org.springframework.stereotype.Service;
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.format.TextStyle;
-import java.util.List;
-import java.util.Locale;
-import java.util.Optional;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Service
@@ -31,17 +29,14 @@ public class EventService {
     @Autowired
     private UserRepository userRepository;
 
-    @Autowired
-    private EventParticipantRepository eventParticipantRepository;
-
-    private EventResponse eventToResponse(Event event, User user) {
+    private EventResponse eventToResponse(Event event) {
         return EventResponse.builder()
                 .eventId(event.getEventId())
                 .name(event.getName())
                 .host(UserContactResponse.builder()
-                        .email(user.getEmail())
-                        .firstName(user.getFirstName())
-                        .lastName(user.getLastName())
+                        .email(event.getHost().getEmail())
+                        .firstName(event.getHost().getFirstName())
+                        .lastName(event.getHost().getLastName())
                         .build())
                 .startTime(event.getStartTime().toLocalDateTime())
                 .endTime(event.getEndTime().toLocalDateTime())
@@ -52,7 +47,7 @@ public class EventService {
                                                 .email(eventParticipant.getUser().getEmail())
                                                 .firstName(eventParticipant.getUser().getFirstName())
                                                 .lastName(eventParticipant.getUser().getLastName())
-                                                .confirmed(eventParticipant.getStatus())
+                                                .status(eventParticipant.getStatus())
                                                 .timeCreated(eventParticipant.getTimeCreated())
                                                 .timeUpdated(eventParticipant.getTimeUpdated())
                                                 .build())
@@ -62,14 +57,9 @@ public class EventService {
                 .build();
     }
 
-    private boolean isUserInParticipants(Event event, String email) {
-        return event.getParticipants().stream().map(
-                        eventParticipant -> eventParticipant
-                                .getUser().getEmail())
-                .toList()
-                .contains(email);
+    private boolean isEventNameValid(String name) {
+        return name != null && !name.isEmpty();
     }
-
 
     private void addParticipant(Event event, String email) {
         if (!event.getHost().getEmail().equals(email)) {
@@ -81,8 +71,6 @@ public class EventService {
                 eventParticipant.setUser(u);
                 eventParticipant.setStatus(EventParticipationStatus.PENDING);
 
-                this.eventParticipantRepository.save(eventParticipant);
-
                 event.addParticipant(eventParticipant);
             });
         }
@@ -92,23 +80,65 @@ public class EventService {
         Optional<User> user = this.userRepository.findByEmail(email);
 
         user.ifPresent(u -> {
-            List<EventParticipant> participants = event.getParticipants();
-            EventParticipant eventParticipant = new EventParticipant();
-            eventParticipant.setEvent(event);
+            Optional<EventParticipant> toRemove = event.getParticipants()
+                    .stream()
+                    .filter(p -> p.getUser().getEmail().equals(email))
+                    .findFirst();
 
-            //this.eventParticipantRepository.deleteById(eventParticipant)
-            participants.add(eventParticipant);
-            event.setParticipants(participants);
+            toRemove.ifPresent(event::removeParticipant);
         });
+    }
+
+    private void updateParticipant(Event event, EventParticipantRequest request) {
+        Optional<EventParticipant> eventParticipant = event.getParticipants()
+                .stream()
+                .filter(p -> p.getUser().getEmail().equals(request.getEmail()))
+                .findFirst();
+
+        eventParticipant.ifPresent(ep -> {
+            if (!ep.getStatus().equals(request.getStatus())) {
+                ep.setStatus(request.getStatus());
+            }
+        });
+
+    }
+
+    private void updateParticipants(Event event, List<EventParticipantRequest> newParticipants) {
+        Set<String> oldEmails = event.getParticipants()
+                .stream()
+                .map(participant -> participant.getUser().getEmail())
+                .collect(Collectors.toSet());
+
+        Set<String> newEmails = newParticipants
+                .stream()
+                .map(EventParticipantRequest::getEmail)
+                .collect(Collectors.toSet());
+
+        Set<String> removedEmails = new HashSet<>(oldEmails);
+        removedEmails.removeAll(newEmails);
+
+        Set<String> addedEmails = new HashSet<>(newEmails);
+        addedEmails.removeAll(oldEmails);
+
+        Set<String> updatedUserEmails = new HashSet<>(oldEmails);
+        updatedUserEmails.retainAll(newEmails);
+
+        List<EventParticipantRequest> updatedUserParticipants = newParticipants
+                .stream()
+                .filter(request -> updatedUserEmails.contains(request.getEmail()))
+                .toList();
+
+        removedEmails.forEach(email -> this.removeParticipant(event, email));
+
+        addedEmails.forEach(email -> this.addParticipant(event, email));
+
+        updatedUserParticipants.forEach(eventParticipantRequest -> this.updateParticipant(event, eventParticipantRequest));
     }
 
     public List<EventResponse> getAllEvents() throws Exception {
         List<Event> events = this.eventRepository.findAll();
 
-        return events.stream().map(event -> {
-            User user = this.userRepository.findByUserId(event.getHost().getUserId()).orElseThrow();
-            return this.eventToResponse(event, user);
-        }).collect(Collectors.toList());
+        return events.stream().map(this::eventToResponse).toList();
     }
 
     public Event getEvent(String id) throws Exception {
@@ -116,6 +146,9 @@ public class EventService {
     }
 
     public EventResponse addEvent(CreateEventRequest request) throws Exception {
+        if (!isEventNameValid(request.getName())) {
+            throw new Exception("Event name cannot be blank!");
+        }
         User user = this.userRepository.findByUserId(request.getHost()).orElseThrow(
                 () -> new Exception("User does not exist!"));
 
@@ -130,37 +163,48 @@ public class EventService {
         request.getParticipants().forEach(
                 email -> this.addParticipant(event, email));
 
-        return this.eventToResponse(event, user);
+        return this.eventToResponse(event);
     }
 
-    public Event partialUpdate(String id, EventRequest request) throws Exception {
+    public EventResponse partialUpdate(String id, EventRequest request) throws Exception {
         Event event = this.eventRepository.findById(id).orElseThrow(() -> new Exception("Event not found!"));
-        if (request.getName() != null) {
+
+        if (this.isEventNameValid(request.getName())) {
             event.setName(request.getName());
         }
-        if (request.getStartTime() != null) {
-            if (request.getTimezone() != null) {
+
+        if (request.getTimezone() != null) {
+            if (request.getStartTime() != null && request.getEndTime() != null) {
+                ZonedDateTime newStart = ZonedDateTime.of(request.getStartTime(), ZoneId.of(request.getTimezone()));
+                ZonedDateTime newEnd = ZonedDateTime.of(request.getEndTime(), ZoneId.of(request.getTimezone()));
+
+                event.setTime(newStart, newEnd);
+            } else if (request.getStartTime() != null) {
                 event.setStartTime(ZonedDateTime.of(request.getStartTime(), ZoneId.of(request.getTimezone())));
-            } else {
-                throw new Exception("Timezone must be specified!");
-            }
-        }
-        if (request.getEndTime() != null) {
-            if (request.getTimezone() != null) {
+            } else if (request.getEndTime() != null) {
                 event.setEndTime(ZonedDateTime.of(request.getEndTime(), ZoneId.of(request.getTimezone())));
             } else {
-                throw new Exception("Timezone must be specified!");
+                ZonedDateTime newStart = ZonedDateTime.of(event.getStartTime().toLocalDateTime(), ZoneId.of(request.getTimezone()));
+                ZonedDateTime newEnd = ZonedDateTime.of(event.getEndTime().toLocalDateTime(), ZoneId.of(request.getTimezone()));
+
+                event.setTime(newStart, newEnd);
             }
         }
-        if (request.getParticipants() != null) {
+
+        if (request.getHost() != null) {
             User user = this.userRepository.findByUserId(request.getHost()).orElseThrow(
                     () -> new Exception("User does not exist!"));
             event.setHost(user);
         }
 
+
+        if (request.getParticipants() != null) {
+            this.updateParticipants(event, request.getParticipants());
+        }
+
         this.eventRepository.save(event);
 
-        return event;
+        return this.eventToResponse(event);
     }
 
     public void deleteEvent(String id) {
